; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_deband.c_frand.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_deband.c_frand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32, i32)* @frand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @frand(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca float, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = sitofp i32 %6 to double
  %8 = fmul double %7, 1.298980e+01
  %9 = load i32, i32* %4, align 4
  %10 = sitofp i32 %9 to double
  %11 = fmul double %10, 7.823300e+01
  %12 = fadd double %8, %11
  %13 = fptosi double %12 to i32
  %14 = call double @sinf(i32 %13)
  %15 = fmul double %14, 0x40E55DD170A3D70A
  %16 = fptrunc double %15 to float
  store float %16, float* %5, align 4
  %17 = load float, float* %5, align 4
  %18 = load float, float* %5, align 4
  %19 = call float @llvm.floor.f32(float %18)
  %20 = fsub float %17, %19
  ret float %20
}

declare dso_local double @sinf(i32) #1

; Function Attrs: nounwind readnone speculatable willreturn
declare float @llvm.floor.f32(float) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
